--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -7,6 +7,6 @@
 }
 
 .logo {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: bold;
 }
